simple/test/features/errors/semantic/e1021_missing_struct_fields.spl
# E1021: Missing Struct Fields

Feature: E1021 - Missing Struct Fields
  As a Simple compiler
  I want to detect missing required fields in struct literals
  So that structs are fully initialized

  Background:
    Given I have the Simple compiler

  Scenario: Missing one field
    When I compile:
      '''
      struct Point:
        x: i32
        y: i32

      val p = Point { x: 10 }  # Error: missing field y
      '''
    Then I should see error E1021 at line 5
    And the error message should be "missing required field(s) in struct literal: {fields}"
    And the label should indicate "missing fields here"
    And the help should suggest "provide all required fields when constructing the struct"

  Scenario: Missing multiple fields
    When I compile:
      '''
      struct Rectangle:
        x: i32
        y: i32
        width: i32
        height: i32

      val rect = Rectangle { x: 0 }  # Error: missing y, width, height
      '''
    Then I should see error E1021 at line 6
    And the error should list all missing fields

  Scenario: Missing field with default value (if supported)
    When I compile:
      '''
      struct Config:
        host: str
        port: i32 = 8080  # Default value

      val cfg = Config { host: "localhost" }  # OK if defaults supported
      '''
    Then compilation should succeed or show appropriate error

  Scenario: All fields provided
    When I compile:
      '''
      struct Point:
        x: i32
        y: i32

      val p = Point { x: 10, y: 20 }  # OK: all fields present
      '''
    Then compilation should succeed

  Scenario: Struct with shorthand field syntax
    When I compile:
      '''
      struct Point:
        x: i32
        y: i32

      fn create(x: i32, y: i32) -> Point:
        Point { x, y }  # OK: shorthand syntax
      '''
    Then compilation should succeed

  Scenario: Tuple struct missing arguments
    When I compile:
      '''
      struct Point(i32, i32)

      val p = Point(10)  # Error: missing second argument
      '''
    Then I should see error related to argument count

  Scenario: Korean language error
    Given I set compiler language to "ko"
    When I compile:
      '''
      struct Point:
        x: i32
        y: i32

      val p = Point { x: 10 }
      '''
    Then I should see error E1021
    And the error message should contain "구조체 필드 누락"
